finished task 1 of module 1

--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -63,6 +63,20 @@
       }
     }
   }
+
+  &.swiper-slide-active {
+    .slider__item-text {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  &.swiper-slide-next {
+    .slider__item-text {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
 }
 
 .slider__item-title {
@@ -96,6 +110,9 @@
   max-width: 34rem;
   font-size: 1.8rem;
   line-height: 2rem;
+  opacity: 0;
+  transform: translateX(3rem);
+  transition: opacity 0.7s linear, transform 0.7s linear;
 
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
