--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -6,6 +6,10 @@
       opacity: 1;
       pointer-events: auto;
     }
+
+    .social-block__link {
+      opacity: 1;
+    }
   }
 }
 
@@ -89,6 +93,7 @@
   margin-top: 1.5rem;
   opacity: 0;
   pointer-events: none;
+  transition: opacity 0.3s ease-in;
 
   @media (min-width: $stop-scaling) {
     margin-top: 15px;
@@ -168,6 +173,8 @@
   color: $c-light;
   border: 2px solid transparent;
   border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
@@ -186,6 +193,7 @@
 
   &:hover {
     color: $c-purple;
+    opacity: 1;
   }
 
   &:focus {
@@ -207,6 +215,7 @@
   }
 
   &--fb {
+    transition-delay: 0.1s;
     svg {
       width: 0.8rem;
       height: 1.7rem;
@@ -219,6 +228,7 @@
   }
 
   &--insta {
+    transition-delay: 0.2s;
     svg {
       width: 1.5rem;
       height: 1.5rem;
@@ -231,6 +241,7 @@
   }
 
   &--vk {
+    transition-delay: 0.3s;
     svg {
       width: 1.7rem;
       height: 1rem;
