--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -1,3 +1,10 @@
+.screen--game.active {
+  .form__field {
+    padding: 0 5.6rem;
+    width: calc(100% - 21rem);
+  }
+}
+
 .form {
   position: relative;
   display: flex;
@@ -30,11 +37,12 @@
 }
 
 .form__field {
+  position: absolute;
+  right: 21rem;
   flex: none;
-  margin-right: 3rem;
-  padding: 0 5.6rem;
+  padding: 0;
   height: 6rem;
-  width: calc(100% - 21rem);
+  width: 0;
   text-transform: uppercase;
   font: inherit;
   font-size: 2.4rem;
@@ -43,6 +51,7 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
+  transition: width 0.5s ease-in-out 0.2s, padding 0.3s ease 0.2s;
 
   &:focus {
     border: 1px solid $c-purple;
@@ -79,7 +88,7 @@
 }
 
 .form__button {
-  flex-grow: 1;
+  margin-left: auto;
 
   @media (orientation: portrait) {
     position: relative;
