--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -1,3 +1,10 @@
+.screen--intro.active {
+  p {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .intro {
   display: flex;
   flex-direction: column;
@@ -115,6 +122,9 @@
 
   p {
     margin: 0;
+    opacity: 0;
+    transform: translateY(2rem);
+    transition: opacity 0.35s ease-in, transform 0.35s ease-in;
   }
 
   svg {
