--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -39,6 +39,7 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
+    transition: width 0.3s ease-in, height 0.3s ease-in;
   }
 
   svg {
@@ -93,7 +94,6 @@
   margin-top: 1.5rem;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.3s ease-in;
 
   @media (min-width: $stop-scaling) {
     margin-top: 15px;
@@ -174,7 +174,6 @@
   border: 2px solid transparent;
   border-radius: 50%;
   opacity: 0;
-  transition: opacity 0.3s ease-in;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
@@ -193,7 +192,6 @@
 
   &:hover {
     color: $c-purple;
-    opacity: 1;
   }
 
   &:focus {
@@ -215,7 +213,7 @@
   }
 
   &--fb {
-    transition-delay: 0.1s;
+    transition: opacity 0.3s ease-in 0.1s, color 0.2s ease-in;
     svg {
       width: 0.8rem;
       height: 1.7rem;
@@ -228,7 +226,7 @@
   }
 
   &--insta {
-    transition-delay: 0.2s;
+    transition: opacity 0.3s ease-in 0.2s, color 0.2s ease-in;
     svg {
       width: 1.5rem;
       height: 1.5rem;
@@ -241,7 +239,7 @@
   }
 
   &--vk {
-    transition-delay: 0.3s;
+    transition: opacity 0.3s ease-in 0.3s, color 0.2s ease-in;
     svg {
       width: 1.7rem;
       height: 1rem;
