--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -1,5 +1,5 @@
 .screen--intro.active {
-  p {
+  .intro__message {
     opacity: 1;
     transform: translateY(0);
   }
@@ -100,6 +100,9 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  opacity: 0;
+  transform: translateY(2rem);
+  transition: opacity 0.35s ease-in, transform 0.35s ease-in;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
@@ -122,9 +125,6 @@
 
   p {
     margin: 0;
-    opacity: 0;
-    transform: translateY(2rem);
-    transition: opacity 0.35s ease-in, transform 0.35s ease-in;
   }
 
   svg {
