--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -247,11 +247,13 @@
       content: "";
       position: absolute;
       bottom: 0;
-      width: 0;
+      left: 0;
+      width: 100%;
       height: 2px;
       background-color: $c-light;
-      right: 0;
-      transition: width 0.3s ease-out;
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.3s linear;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -268,7 +270,7 @@
 
     &.active {
       &::after {
-        width: 100%;
+        transform: scaleX(1);
       }
     }
 
@@ -280,9 +282,8 @@
       &::after {
         opacity: 1;
         background-color: $c-purple;
-        left: 0;
-        right: auto;
-        width: 100%;
+        transform: scaleX(1);
+        transform-origin: left;
       }
     }
   }
