--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -1,7 +1,27 @@
 .screen--game.active {
   .form__field {
-    transform: scaleX(1);
-    transform-origin: right;
+    padding: 0 5.6rem;
+    width: calc(100% - 21rem);
+
+    @media (min-width: $stop-scaling) {
+      padding: 0 56px;
+      width: calc(100% - 210px);
+    }
+
+    @media (orientation: portrait) {
+      padding: 0 2.5rem;
+      width: calc(100% - 5rem);
+    }
+
+    @media (max-width: $tablet) and (orientation: landscape) {
+      padding: 0 5.6rem;
+      width: calc(100% - 9rem);
+    }
+
+    @media (max-width: $mobile) and (orientation: landscape) {
+      padding: 0 2.5rem;
+      width: calc(100% - 5rem);
+    }
   }
 }
 
@@ -37,11 +57,12 @@
 }
 
 .form__field {
+  position: absolute;
+  right: 21rem;
   flex: none;
-  margin-right: 3rem;
-  padding: 0 5.6rem;
+  padding: 0;
   height: 6rem;
-  width: calc(100% - 21rem);
+  width: 0;
   text-transform: uppercase;
   font: inherit;
   font-size: 2.4rem;
@@ -50,46 +71,38 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 0.3s linear;
+  transition: width 0.75s ease, padding 0.75s ease;
 
   &:focus {
     border: 1px solid $c-purple;
   }
 
   @media (min-width: $stop-scaling) {
-    margin-right: 30px;
-    padding: 0 56px;
+    right: 210px;
     height: 60px;
-    width: calc(100% - 210px);
     font-size: 24px;
     border-radius: 30px;
   }
 
   @media (orientation: portrait) {
-    margin-right: 1rem;
-    padding: 0 2.5rem;
-    width: calc(100% - 5rem);
+    right: 5rem;
     height: 4rem;
     font-size: 1.6rem;
   }
 
   @media (max-width: $tablet) and (orientation: landscape) {
-    width: calc(100% - 9rem);
+    right: 9rem;
   }
 
   @media (max-width: $mobile) and (orientation: landscape) {
-    margin-right: 1rem;
-    padding: 0 2.5rem;
-    width: calc(100% - 5rem);
+    right: 5rem;
     height: 4rem;
     font-size: 1.6rem;
   }
 }
 
 .form__button {
-  flex-grow: 1;
+  margin-left: auto;
 
   @media (orientation: portrait) {
     position: relative;
