--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -102,7 +102,7 @@
   line-height: 1.27;
   opacity: 0;
   transform: translateY(2rem);
-  transition: opacity 0.35s ease-in, transform 0.35s ease-in;
+  transition: opacity 0.35s ease-in 0.6s, transform 0.35s ease-in 0.6s;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
