--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -46,6 +46,9 @@
   color: $c-dark;
   background-color: $c-light;
   z-index: 1;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: opacity 0.3s linear, transform 0.3s cubic-bezier(0, 0.73, 0.58, 1);
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
