--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,9 +1,11 @@
 @import "general/variables.scss";
 @import "~normalize.css/normalize.css";
 @import "~swiper/css/swiper.css";
+@import "general/keyframes.scss";
 @import "general/mixins.scss";
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
+@import "general/loaded.scss";
 
 // Blocks
 @import "blocks/animation-screen.scss";
