--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -159,6 +159,7 @@
     border-radius: 50%;
     line-height: 5rem;
     text-align: center;
+    opacity: 0;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
@@ -179,9 +180,27 @@
 
   p {
     margin: 0;
+    opacity: 0;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
+    }
+  }
+
+  @for $i from 1 through 4 {
+    &:nth-child(#{$i}):before {
+      animation-name: show-rule-bullet;
+      animation-duration: 0.75s;
+      animation-delay: (185ms * $i);
+      animation-timing-function: cubic-bezier(0, 1.8, 1, 1.1);
+      animation-fill-mode: forwards;
+    }
+    &:nth-child(#{$i}) p {
+      animation-name: show-rule-bullet-text;
+      animation-duration: 0.85s;
+      animation-delay: (210ms * $i);
+      animation-timing-function: ease;
+      animation-fill-mode: forwards;
     }
   }
 }
@@ -190,6 +209,29 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+
+  &.btn {
+    color: rgba(255, 255, 255, 0);
+
+    animation-name: text-color-opacity;
+    animation-duration: 0.3s;
+    animation-delay: 1.2s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+
+    &:before {
+      right: 0;
+      left: auto;
+      transform: translateY(-50%);
+      opacity: 0;
+
+      animation-name: increase-width;
+      animation-duration: 0.3s;
+      animation-delay: 1s;
+      animation-timing-function: ease-in;
+      animation-fill-mode: forwards;
+    }
+  }
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
