--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -9,11 +9,53 @@
 
 @keyframes expand-social-block-toggler {
   from {
-    width: 30%;
-    height: 30%;
+    width: 0%;
+    height: 0%;
   }
   to {
     width: 100%;
     height: 100%;
+  }
+}
+
+@keyframes show-rule-bullet {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes show-rule-bullet-text {
+  from {
+    opacity: 0;
+    transform: translateX(2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes text-color-opacity {
+  from {
+    color: rgba(255, 255, 255, 0);
+  }
+  to {
+    color: $c-dark;
+  }
+}
+
+@keyframes increase-width {
+  from {
+    opacity: 0;
+    width: 20%;
+  }
+  to {
+    opacity: 1;
+    width: 100%;
   }
 }
