implemented letter-by-letter text animation

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -9,6 +9,7 @@
 
 // Blocks
 @import "blocks/animation-screen.scss";
+@import "blocks/text-animation.scss";
 @import "blocks/screen-fill-effect.scss";
 @import "blocks/btn.scss";
 @import "blocks/chat.scss";
