--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -59,3 +59,106 @@
     width: 100%;
   }
 }
+
+@keyframes scale-suitcase-from-bottom {
+  0% {
+    transform: scale(0);
+    transform-origin: 50% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 100%;
+  }
+}
+
+@keyframes rotate-flamingo-from-bottom {
+  0% {
+    opacity: 0;
+    transform: translateY(25rem) rotate(-30deg);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) rotate(0deg);
+  }
+}
+
+@keyframes float-flamingo {
+  0% {
+    transform: translate3d(0, 0, 0) rotate3d(1, 1, 1, 0);
+  }
+  50% {
+    transform: translate3d(0, 20px, 0) rotate3d(1, 1, 1, -10deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0) rotate3d(1, 1, 1, 0);
+  }
+}
+
+@keyframes rotate-green-leaf {
+  0% {
+    transform: rotate(-10deg);
+    opacity: 0;
+  }
+  20% {
+    transform: rotate(20deg);
+    opacity: 1;
+  }
+  40% {
+    transform: rotate(-5deg);
+  }
+  60% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+
+@keyframes rotate-blue-leaf-left {
+  0% {
+    transform: rotate(60deg);
+    opacity: 0;
+  }
+  20% {
+    transform: rotate(-10deg);
+    opacity: 1;
+  }
+  40% {
+    transform: rotate(15deg);
+  }
+  60% {
+    transform: rotate(-5deg);
+  }
+  80% {
+    transform: rotate(5deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+
+@keyframes rotate-blue-leaf-right {
+  0% {
+    transform: rotate(-45deg);
+    opacity: 0;
+  }
+  20% {
+    transform: rotate(10deg);
+    opacity: 1;
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  60% {
+    transform: rotate(5deg);
+  }
+  80% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
