animate result input and button
animate result input and button

--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -326,26 +326,80 @@
   }
 }
 
+.screen--result {
+  .form__button {
+    opacity: 0;
+
+    span {
+      opacity: 0;
+    }
+  }
+
+  .form__field--result {
+    display: flex;
+    position: relative;
+    justify-content: flex-end;
+    width: 100%;
+    margin: 0 3rem 0 auto;
+
+    &::after {
+      content: ' ';
+      display: block;
+      width: 0;
+      height: 100%;
+      background-color: #ffffff;
+      border-radius: 3rem;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: -1;
+    }
+  }
+
+  .form__field--result-input {
+    flex: initial;
+    opacity: 0;
+    margin: 0;
+  }
+}
+
 .screen--result.screen--show {
   .result__image-item {
     &--suitcase {
-      animation: scale-suitcase-from-bottom 0.5s cubic-bezier(0.6, -0.25, 0.34, 1.51) forwards;
+      animation: scale-suitcase-from-bottom 0.7s cubic-bezier(0.6, -0.25, 0.34, 1.51);
     }
 
     &--flamingo {
-      animation: rotate-flamingo-from-bottom 0.4s ease-out, float-flamingo 2s ease-in-out infinite 0.5s;
+      animation: rotate-flamingo-from-bottom 0.6s ease-out, float-flamingo 2s ease-in-out infinite 0.5s;
     }
 
     &--leaf-green {
-      animation: rotate-green-leaf 2s ease-out both 0.3s;
+      animation: rotate-green-leaf 2s ease-out both 0.5s;
     }
 
     &-leaves--left {
-      animation: rotate-blue-leaf-left 2s ease-out 1 both 0.3s;
+      animation: rotate-blue-leaf-left 2s ease-out 1 both 0.5s;
     }
 
     &-leaves--right {
-      animation: rotate-blue-leaf-right 2s ease-out 1 both 0.2s;
+      animation: rotate-blue-leaf-right 2s ease-out 1 both 0.5s;
     }
+  }
+
+  .form__field--result::after {
+    animation: width-from-right 0.75s ease 0.5s forwards;
+  }
+
+  .form__field--result-input {
+    animation: fade-in 1s ease 1s forwards;
+    width: 100%;
+  }
+
+  .form__button span {
+    animation: fade-in 1.5s ease .5s forwards;
+  }
+
+  .form__button {
+    animation: fade-in 0.3s ease .5s forwards;
   }
 }
