--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -60,6 +60,29 @@
   }
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes width-from-right {
+  from {
+    opacity: 0;
+    width: 0;
+  }
+  33%{
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+    width: 100%;
+  }
+}
+
 @keyframes scale-suitcase-from-bottom {
   0% {
     transform: scale(0);
