--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -1,3 +1,13 @@
+.screen--story.active {
+  .slider__control--prev {
+    animation: roll-in-right 1s ease;
+  }
+
+  .slider__control--next {
+    animation: roll-in-left 1s ease;
+  }
+}
+
 .slider {
   position: relative;
   flex-grow: 1;
@@ -290,6 +300,79 @@
       width: 0.4rem;
       height: 0.4rem;
       background-color: $c-light;
+    }
+  }
+}
+
+@media (min-width: ($mobile + 1)) and (orientation: landscape) {
+  [data-screen="story"][data-slide="2"]{
+    .slider__control{
+      color: $c-blue-dark;
+
+      &::before{
+        background-color: $c-light;
+        border: 2px solid $c-light;
+      }
+      &:hover{
+        color: $c-blue-light;
+      }
+      &:focus {
+        color: $c-blue-light;
+        &::before{
+          border-color: $c-blue-light;
+        }
+      }
+      &:active,
+      &:active:focus {
+        color: $c-light;
+        &::before {
+          width: 100%;
+          height: 100%;
+          background-color: $c-blue-light;
+          border-color: $c-blue-light;
+        }
+      }
+    }
+    .slider__pagination.swiper-pagination{
+      .swiper-pagination-bullet{
+        background-color: $c-light;
+      }
+    }
+  }
+
+  [data-screen="story"][data-slide="3"]{
+    .slider__control{
+      color: $c-blue-light;
+
+      &::before{
+        background-color: $c-light;
+        border: 2px solid $c-light;
+      }
+      &:hover{
+        color: $c-blue-dark;
+      }
+      &:focus {
+        color: $c-blue-dark;
+        &::before{
+          border-color: $c-blue-dark;
+        }
+      }
+      &:active,
+      &:active:focus {
+        color: $c-light;
+        &::before {
+          width: 100%;
+          height: 100%;
+          background-color: $c-blue-dark;
+          border-color: $c-blue-dark;
+        }
+      }
+
+    }
+    .slider__pagination.swiper-pagination{
+      .swiper-pagination-bullet{
+        background-color: $c-blue-dark;
+      }
     }
   }
 }
