--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -185,3 +185,25 @@
     transform: rotate(0);
   }
 }
+
+@keyframes roll-in-right {
+  from {
+    opacity: 0;
+    transform: translateX(-10rem) rotate(-180deg);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) rotate(0);
+  }
+}
+
+@keyframes roll-in-left {
+  from {
+    opacity: 0;
+    transform: translateX(10rem) rotate(180deg);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) rotate(0);
+  }
+}
