--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -1,6 +1,8 @@
 $c-light: #ffffff;
 $c-dark: #5f458c;
 $c-purple: #a67ee5;
+$c-blue-light: #a7c7ff;
+$c-blue-dark: #307fff;
 
 $font: "Proxima Nova", "Arial", sans-serif;
 $font-alt: "Radical",  "Arial", sans-serif;
